# rust-memex

./: .gitignore  .semgrep.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  LICENSE-APACHE  Makefile  README.md  SECURITY.md  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  loctree-ci.yml  pages.yml  release.yml  semgrep.yml
.semgrep/: path-traversal-sanitizers.yml
.vibecrafted/: GUIDELINES.md  plans  reports
ai-hooks/: README.md  memex-context.sh  memex-startup.sh
crates/memex-contracts/: Cargo.toml
crates/memex-contracts/src/: audit.rs  lib.rs  progress.rs  stats.rs  timeline.rs
crates/rust-memex/: Cargo.toml
crates/rust-memex/src/: build.rs  common.rs  diagnostics.rs  lib.rs  lifecycle.rs  mcp_core.rs  mcp_protocol.rs  path_utils.rs  recovery.rs  tools.rs
crates/rust-memex/src/http/: lifecycle.rs  mod.rs  recovery.rs
crates/rust-memex/src/preprocessing/: mod.rs
crates/rust-memex/src/rag/: mod.rs  pipeline.rs
crates/rust-memex/src/search/: bm25.rs  hybrid.rs
crates/rust-memex/src/storage/: mod.rs
crates/rust-memex/src/tests/: memory.rs  mod.rs  transport_parity.rs
crates/rust-memex/src/tui/: app.rs  detection.rs  health.rs  host_detection.rs  mod.rs  monitor.rs
crates/rust-memex/src/tui/indexer/: mod.rs
crates/rust-memex/tests/: e2e_cli_folder_index.rs  e2e_pipeline.rs  http_diagnostic_endpoints.rs  http_lifecycle_endpoints.rs  http_recovery_endpoints.rs  transport_parity.rs
crates/rust-memex/tests/fixtures/: ioreg_m3_ultra.txt
docs/: 01_security.md  02_configuration.md  ARCHITECTURE_ACTUAL.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_PROMISED.md  HTTP_API.md  INDEXING_GUIDE.md  LOCTREE_INTEGRATION_PROPOSAL.md  MIGRATION.md  PIPELINE_RESUME_PROGRESS_PLAN.md  RELEASE.md  SPLIT_PLAN.md  TUI_DYNAMICS_PLAN.md  TUI_INDEX_MONITOR_PLAN.md  index.html  styles.css
docs/en/: HTTP_API.md  RELEASE.md
docs/pl/: 02_configuration.md  INDEXING_GUIDE.md
scripts/: build-macos.sh  build-release-bundle.sh  install.sh  reindex-memories.sh  release-local.sh
src/: engine.rs  lib.rs  mcp_core.rs  mcp_protocol.rs  mcp_runtime.rs  path_utils.rs  progress.rs  tools.rs
src/auth/: mod.rs
src/embeddings/: mod.rs
src/handlers/: mod.rs
src/http/: mod.rs
src/preprocessing/: mod.rs  tests.rs
src/query/: mod.rs  router.rs
src/rag/: mod.rs  pipeline.rs  structured.rs
src/search/: bm25.rs  hybrid.rs  mod.rs
src/security/: mod.rs
src/storage/: mod.rs
src/tests/: memory.rs  transport_parity.rs
src/tui/: app.rs  detection.rs  health.rs  host_detection.rs  indexer.rs  mod.rs  monitor.rs  path_utils.rs  ui.rs
src/tui/indexer/: contracts.rs  files.rs  import.rs  mod.rs  scheduler.rs  sinks.rs  state.rs
tests/: e2e_cli_folder_index.rs  e2e_pipeline.rs  engine_integration.rs  transport_parity.rs
tools/githooks/: pre-commit  pre-push
