[package]
name = "rmcp-memex"
version = "0.1.13"
edition = "2024"
build = "src/build.rs"
description = "RAG/memory MCP server with LanceDB vector storage"
license = "MIT"
repository = "https://github.com/Loctree/rmcp-memex"
keywords = ["mcp", "rag", "embeddings", "lancedb", "vector-search"]
categories = ["development-tools", "database"]

[lib]
name = "rmcp_memex"
path = "src/lib.rs"

[[bin]]
name = "rmcp_memex"
path = "src/bin/rmcp_memex.rs"

[dependencies]
# Core MCP
rmcp = { version = "0.12", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Storage (lancedb: disabled cloud providers - aws/azure/gcs/oss/dynamodb)
sled = "0.34"
moka = { version = "0.12", features = ["future"] }
# NOTE: fastembed removed - was causing ONNX model download in Claude Desktop sandbox
# We use MLX exclusively for embeddings (4096 dims vs FastEmbed's 384 dims)
lancedb = { version = "0.22.3", default-features = false }
arrow-array = "56.2"
arrow-schema = "56.2"
futures = "0.3"

# HTTP & APIs
reqwest = { version = "0.12", features = ["json", "stream"] }

# Document parsing
pdf-extract = "0.10"

# Directory walking
walkdir = "2.5"
glob = "0.3"

# Text processing
regex = "1.11"
lazy_static = "1.5"

# Cryptographic hashing for deduplication
sha2 = "0.10"

# Utils
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
shellexpand = "3.1"

# TUI (wizard configurator)
ratatui = "0.29"
crossterm = "0.29"

[build-dependencies]
protoc-bin-vendored = "3"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1
strip = true
