[package]
name = "rmcp-memex"
version = "0.5.0"
edition = "2024"
build = "src/build.rs"
description = "RAG/memory MCP server with LanceDB vector storage"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VetCoders/rmcp-memex"
homepage = "https://github.com/VetCoders/rmcp-memex"
documentation = "https://docs.rs/rmcp-memex"
readme = "README.md"
keywords = ["mcp", "rag", "embeddings", "lancedb", "vector-search"]
categories = ["development-tools", "database"]

[features]
default = ["cli", "provider-cascade"]

# CLI feature: enables the binary, TUI wizard, and progress bars
cli = ["clap", "indicatif", "ratatui", "crossterm"]

# Provider cascade: current Ollama/OpenAI-compatible embedding approach
provider-cascade = []

# Embedded Candle embeddings (placeholder for future)
# embedded-candle = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]

[lib]
name = "rmcp_memex"
path = "src/lib.rs"

[[bin]]
name = "rmcp-memex"
path = "src/bin/rmcp_memex.rs"
required-features = ["cli"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Storage (lancedb: disabled cloud providers - aws/azure/gcs/oss/dynamodb)
# NOTE: fastembed removed - was causing ONNX model download in Claude Desktop sandbox
# We use MLX exclusively for embeddings (4096 dims vs FastEmbed's 384 dims)
lancedb = { version = "0.22.3", default-features = false }
arrow-array = "56.2"
arrow-schema = "56.2"
futures = "0.3"

# HTTP & APIs
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
axum = { version = "0.8", features = ["json"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
async-stream = "0.3"

# Document parsing
pdf-extract = "0.10"

# Directory walking
walkdir = "2.5"
glob = "0.3"

# Text processing
regex = "1.11"

# Cryptographic hashing for deduplication
sha2 = "0.10"

# Utils
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
shellexpand = "3.1"

# CLI-only dependencies (optional, enabled by "cli" feature)
clap = { version = "4.5", features = ["derive"], optional = true }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", optional = true }
indicatif = { version = "0.17", optional = true }

# BM25 keyword search (hybrid search with vector)
tantivy = "0.22"

[build-dependencies]
protoc-bin-vendored = "3"

[dev-dependencies]
tempfile = "3.14"

[patch.crates-io]
# Keep local directory namespaces without pulling unused cloud backends into the graph.
lance-namespace-impls = { path = "vendor/lance-namespace-impls" }

[profile.release]
lto = true
codegen-units = 1
strip = true
