[workspace]
resolver = "2"
members = ["crates/rust-memex", "crates/memex-contracts"]
default-members = ["crates/rust-memex"]

[workspace.package]
version = "0.6.2"
edition = "2024"
rust-version = "1.88"
description = "Operator CLI + MCP server: canonical corpus second: semantic index second to aicx"
authors = ["Maciej Gad <void@div0.space>", "Monika Szymanska <hello@vetcoders.io>"]
license = "BUSL-1.1"
repository = "https://github.com/Loctree/rust-memex"
homepage = "https://github.com/Loctree/rust-memex"
keywords = ["mcp", "rag", "embeddings", "lancedb", "vector-search"]
categories = ["development-tools", "database"]

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
arrow-array = "56.2"
arrow-schema = "56.2"
async-stream = "0.3"
axum = { version = "0.8", features = ["json", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
futures = "0.3"
glob = "0.3"
indicatif = "0.17"
lancedb = { version = "0.22.3", default-features = false }
openidconnect = { version = "4.0.1", default-features = false, features = ["reqwest"] }
pdf-extract = "0.10"
protoc-bin-vendored = "3"
ratatui = "0.29"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
shellexpand = "3.1"
subtle = "2.5"
sysinfo = "0.33"
tantivy = "0.22"
tempfile = "3.14"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
walkdir = "2.5"

[patch.crates-io]
# Keep local directory namespaces without pulling unused cloud backends into the graph.
lance-namespace-impls = { path = "vendor/lance-namespace-impls" }

[profile.release]
lto = true
codegen-units = 1
strip = true
