[package]
name = "memex-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shared serde contracts for rust-memex transports and future frontends"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
